# wildfire-exposure-eo

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PRE_DEV_CHECKLIST.md  README.md  inventory.yaml  pyproject.toml
.claude/: settings.json
.claude/skills/usage-throttle/: SKILL.md
.github/workflows/: ci.yml
config/: burn_scar.yaml  exposure_score.yaml  fire_weather.yaml  fuel_crosswalk.yaml
data/aoi/: README.md  alt_aveiro_sever_do_vouga.geojson  alt_pedrogao_grande.geojson  alt_peneda_geres.geojson  alt_serra_da_estrela.geojson  iberia.geojson  monchique.geojson  pedrogao_grande.geojson  peneda_geres.geojson  pilot.geojson  portugal_national.geojson  serra_da_estrela.geojson  smoke_aveiro_sever_do_vouga.geojson  smoke_monchique.geojson  smoke_pedrogao_grande.geojson  smoke_peneda_geres.geojson  smoke_serra_da_estrela.geojson
data/crosswalks/: icnf_to_scott_burgan.yaml
data/taxonomy/: critical_infrastructure.yaml
docs/: aoi_rationale.md  burn_scar_audit.md  burn_scar_optimization.md  data_sources.md  demo.md  diagrams.md  firescope_benchmark.md  glossary.md  index.html  limitations.md  methodology.md  operationalization.md  roadmap.md  scaling.md  strategy.md  validation_report.md
docs/app/: app.js  style.css
docs/app/data/: aoi.geojson  aoi_monchique.geojson  aoi_pedrogao_grande.geojson  aoi_peneda_geres.geojson  aoi_serra_da_estrela.geojson  exposure_assets_20260611T170549Z.geojson  exposure_assets_20260617T035233Z.geojson  exposure_pedrogao_grande_20260616T185352Z.geojson  exposure_peneda_geres_20260616T185712Z.geojson  exposure_serra_da_estrela_20260616T190233Z.geojson  fuel_class_3857_20260611T090120Z.tif  style_data.json
docs/figures/: exposure_map.html  exposure_map_smoke.html
docs/samples/: audit_pilot_aveiro.json  exposure_row_smoke.json  stac_smoke_aveiro.json
prompts/: 00_CLOSEOUT_PLAN.md  01_data_audit.md  02_extract_osm.md  03_burn_scar_inference.md  03_extract_stac.md  04_static_raster_fetch.md  05_icnf_burns_ingestion.md  06_fuel_layer.md  09_burn_scar_inference.md  10_asset_features_score.md  11_validation_closeout.md  12_maps_story.md  13_firescope_comparison.md  14_firescope_local_delirium.md  15_geobrowser.md  16_burn_scar_remediation.md  17_seasonal_fire_weather.md  18_widen_validation.md  19_network_topology_exposure.md  20_operationalization_brief.md  21_firescope_benchmark.md  22_housekeeping_reconcile.md  _HANDOVER_WU9.md  _HANDOVER_stretch2.md  _HIL.md  _session_log.md
scripts/: 00_dgt_fetch.sh  00_earthdata_smoke.py  00_effis_fetch.sh  00_eth_gch_fetch.sh  00_icnf_fetch.sh  00_overpass_smoke.py  00_pc_smoke.py  09_burn_scar_audit.py  09_burn_scar_sanity.py  11_demo_timing.py  11_validate.py  12_make_figures.py  15_make_geobrowser_data.py  15_publish_stac.py  16_burn_scar_gridmetric.py  16_burn_scar_multireducer_run.py  16_burn_scar_multiyear_validate.py  16_burn_scar_prefire_diag.py  16_burn_scar_validate.py  17_burn_scar_optimization_figures.py  17_fire_weather_audit.py  19_topology_audit.py  21_firescope_feasibility.py  22_ewds_fwi_audit.py  23_make_fwi_cogs.py  23_rescore_v030_pilot.py  24_wave2_validate.py  25_make_fwi_cogs.py  26_operational_refresh.py  26_republish_v031_pilot.py  27_republish_v031_pilot.py  28_firescope_benchmark.py  29_make_iberia_inputs.py  30_make_iberia_burn_history.py  32_validate_burnscar_vs_icnf.py  make_test_fixtures.py  pick_smoke_tile.py  run_operational_refresh.sh  wu4_spot_check.py
scripts/dev/: check_usage.sh  run_closeout.sh
src/wildfire_exposure_eo/: __init__.py  audit.py  burn_scar.py  burns.py  cli.py  features.py  fire_weather.py  firescope.py  fuel.py  operational.py  osm.py  scoring.py  stac.py  static_rasters.py  topology.py  validation.py
src/wildfire_exposure_eo/schemas/: __init__.py  burn_perimeter.py  burn_scar.py  fuel_layer.py  geobrowser.py  osm_asset.py  scored_asset.py  source_health.py  stac_manifest.py  static_raster_manifest.py  watch_list.py
stac/: catalog.json
stac/burn-scar-recent/: collection.json
stac/burn-scar-recent/burn-scar-20260610T072820Z/: burn-scar-20260610T072820Z.json
stac/burn-scar-recent/burn-scar-20260615T192025Z/: burn-scar-20260615T192025Z.json
stac/exposure-assets/: collection.json
stac/exposure-assets/exposure-assets-20260611T170549Z/: exposure-assets-20260611T170549Z.json  exposure_20260611T170549Z.parquet
stac/exposure-assets/exposure-assets-20260617T035233Z/: exposure-assets-20260617T035233Z.json  exposure_20260617T035233Z.parquet
stac/fuel-layer/: collection.json
stac/fuel-layer/fuel-layer-20260611T090045Z/: fuel-layer-20260611T090045Z.json  fuel_class_smoke_20260611T090045Z.tif
stac/fuel-layer/fuel-layer-20260611T090120Z/: fuel-layer-20260611T090120Z.json  fuel_class_20260611T090120Z.tif
tests/: conftest.py
tests/fixtures/icnf/: layer_query_2017.json  layer_query_2020.json  layer_query_2024.json  mapserver_index.json
tests/fixtures/overpass/: empty_result.json  nodes_power_tower.json  relation_substation.json  smoke_multi_class.json  way_closed_hospital.json  way_open_railway.json
tests/fixtures/stac/: README.md  cop_dem_glo30.json  esa_worldcover.json  s1_grd.json  s2_l2a_spring.json  s2_l2a_summer.json
tests/integration/: test_audit_smoke.py  test_burn_scar_smoke.py  test_burns_smoke.py  test_figures_smoke.py  test_fuel_smoke.py  test_operational_refresh.py  test_osm_smoke.py  test_score_smoke.py  test_stac_published.py  test_stac_smoke.py  test_static_rasters_smoke.py  test_topology_smoke.py
tests/unit/: test_aoi_geojsons.py  test_audit.py  test_burn_scar.py  test_burns.py  test_features.py  test_figures.py  test_fire_weather.py  test_firescope.py  test_fuel.py  test_geobrowser.py  test_gridmetric.py  test_operational.py  test_osm.py  test_scoring.py  test_stac.py  test_static_rasters.py  test_topology.py  test_validation.py  test_wave2_validate.py
