[project]
name = "wildfire-exposure-eo"
version = "0.0.1"
description = "STAC-native wildfire exposure scoring for OSM critical infrastructure (Portugal pilot)."
authors = [{ name = "Nelson Silvestre", email = "lunasilvestre@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"

# ---------------------------------------------------------------------------
# Pinned for reproducibility. Lockfile is the source of truth at runtime;
# this section is the human-readable contract.
# Any addition requires a one-line justification in the PR description.
# ---------------------------------------------------------------------------
dependencies = [
    # EO / STAC stack
    "pystac-client>=0.8,<0.9",
    "stackstac>=0.5,<0.6",
    "odc-stac>=0.3,<0.4",
    "rioxarray>=0.17,<0.18",
    "rasterio>=1.4,<2.0",
    "xarray>=2024.10,<2025.0",
    "dask[complete]>=2024.10,<2025.0",
    "pystac>=1.11,<2.0",

    # Vector / OSM
    "geopandas>=1.0,<2.0",
    "shapely>=2.0,<3.0",
    "pyproj>=3.7,<4.0",
    "fiona>=1.10,<2.0",
    "duckdb>=1.1,<2.0",
    "pyarrow>=18.0,<19.0",
    "osmnx>=1.9,<2.0",          # convenience for OSM queries; alternative to raw Overpass

    # ML — baseline path (mandatory)
    "torch>=2.4,<3.0",
    "torchvision>=0.19,<0.20",
    "transformers>=4.45,<5.0",
    "torchgeo>=0.6,<0.7",

    # ML — foundation-model path (optional but pinned)
    "terratorch>=0.5,<0.6",

    # Validation, schemas
    "pydantic>=2.9,<3.0",
    "jsonschema>=4.23,<5.0",
    "stac-validator>=3.5,<4.0",

    # CLI / app
    "typer>=0.13,<0.14",
    "rich>=13.9,<14.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "hypothesis>=6.115,<7.0",
    "ruff>=0.7,<0.8",
    "pyright>=1.1.385",
    "pre-commit>=4.0,<5.0",
    "ipykernel",
]

serve = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "asyncpg>=0.30,<0.31",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
]

[project.scripts]
wildfire-exposure-eo = "wildfire_exposure_eo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wildfire_exposure_eo"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "TCH",              # type-checking blocks
    "PTH",              # use pathlib
    "ARG",              # unused arguments
    "RUF",              # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001"]
"scripts/**" = ["E402"]

# ---------------------------------------------------------------------------
# Pyright
# ---------------------------------------------------------------------------
[tool.pyright]
include = ["src", "scripts", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.11"

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "needs_network: requires external network access",
    "needs_gpu: requires CUDA",
]
